--- a/.github/workflows/deploy-to-existing-gcp.yml
+++ b/.github/workflows/deploy-to-existing-gcp.yml
@@ -527,16 +527,30 @@ jobs:
               echo "Looking for 'build:' lines to replace:"
               grep -n "build:" secure-docker-setup/docker-compose.secure.yml || echo "No build: lines found"
               
-              # Apply replacements
-              sed -i "s|^\s*build:.*|image: ${IMAGE_URI}|g" secure-docker-setup/docker-compose.secure.yml || true
-              sed -i "s|^\s*context:.*||g" secure-docker-setup/docker-compose.secure.yml || true  
-              sed -i "s|^\s*dockerfile:.*||g" secure-docker-setup/docker-compose.secure.yml || true
+              # Apply replacements - handle multi-line build block properly
+              # First, replace the build: line with image:
+              sed -i "s|^\s*build:\s*$|    image: ${IMAGE_URI}|g" secure-docker-setup/docker-compose.secure.yml || true
+              # Then remove any context and dockerfile lines (they're now invalid)
+              sed -i "/^\s*context:/d" secure-docker-setup/docker-compose.secure.yml || true  
+              sed -i "/^\s*dockerfile:/d" secure-docker-setup/docker-compose.secure.yml || true
               
               echo "Final compose file size:" $(wc -l secure-docker-setup/docker-compose.secure.yml 2>/dev/null || echo "0")
               
               # Show final result
               echo "After replacements, checking for 'image:' lines:"
               grep -n "image:" secure-docker-setup/docker-compose.secure.yml || echo "No image: lines found"
+              
+              # Validate YAML syntax
+              echo "Validating YAML syntax:"
+              if docker compose -f secure-docker-setup/docker-compose.secure.yml config --quiet 2>/dev/null; then
+                echo "✅ YAML syntax is valid"
+              else
+                echo "❌ YAML syntax error detected!"
+                echo "Showing problematic lines around the image section:"
+                grep -n -A 5 -B 5 "image:" secure-docker-setup/docker-compose.secure.yml || true
+                echo "Full file contents:"
+                cat -n secure-docker-setup/docker-compose.secure.yml | head -20
+              fi
               
             else
               echo "❌ Compose file is missing or empty after modifications!"
