--- a/secure-docker-setup/Dockerfile.secure
+++ b/secure-docker-setup/Dockerfile.secure
@@ -54,9 +54,11 @@ ENV PATH=/home/botuser/.local/bin:$PATH \
 # Copy application code
 COPY --chown=botuser:botuser improved_order_bot.py .
 COPY --chown=botuser:botuser config_template.py .
+COPY --chown=botuser:botuser create_credentials.py .
 
 # Copy customers.json (retrieved from Secret Manager before build)
 COPY --chown=botuser:botuser customers.json ./data/
+
 
 # Security: Remove write permissions where not needed
 RUN chmod 755 /app \
@@ -109,10 +111,22 @@ EXPOSE 8080
 VOLUME ["/app/data", "/app/logs"]
 
 # Security: Use exec form for better signal handling
-ENTRYPOINT ["python", "-u"]
+# Create a startup script that handles credentials creation
+COPY --chown=botuser:botuser <<EOF /app/start.sh
+#!/bin/bash
+set -e
 
-# Default command (can be overridden)
-CMD ["improved_order_bot.py"]
+echo "🔧 Setting up credentials..."
+python create_credentials.py
+
+echo "🚀 Starting Telegram bot..."
+exec python -u improved_order_bot.py
+EOF
+
+RUN chmod +x /app/start.sh
+
+# Use the startup script
+ENTRYPOINT ["/app/start.sh"]
 
 # Metadata
 LABEL maintainer="telegram-bot-team" \
