--- a/.github/workflows/deploy-to-existing-gcp.yml
+++ b/.github/workflows/deploy-to-existing-gcp.yml
@@ -162,6 +162,17 @@ jobs:
           echo "customers.json retrieved successfully"
           ls -la customers.json || echo "Warning: customers.json not found"
 
+      - name: 🔐 Get credentials.json from Secret Manager
+        run: |
+          set -x
+          echo "Retrieving credentials.json from Secret Manager"
+          gcloud secrets versions access latest \
+            --project "${GCP_PROJECT_ID}" \
+            --secret "credentials-for-sheets" > credentials.json
+          
+          echo "credentials.json retrieved successfully"
+          ls -la credentials.json || echo "Warning: credentials.json not found"
+
       - name: 🏗️ Build & Push image
         id: meta
         run: |
