--- a/secure-docker-setup/Dockerfile.secure
+++ b/secure-docker-setup/Dockerfile.secure
@@ -51,8 +51,9 @@ COPY --from=builder --chown=botuser:botuser /root/.local /home/botuser/.local
 ENV PATH=/home/botuser/.local/bin:$PATH \
     PYTHONPATH=/home/botuser/.local/lib/python3.11/site-packages:$PYTHONPATH
 
-# Copy application code
+# Copy application code (both bot scripts)
 COPY --chown=botuser:botuser improved_order_bot.py .
+COPY --chown=botuser:botuser bot.py .
 COPY --chown=botuser:botuser config_template.py .
 
 # Copy customers.json (retrieved from Secret Manager before build)
